[gd_scene load_steps=2 format=3 uid="uid://cwr5x8ixtfmfh"]

[ext_resource type="Script" uid="uid://c224nmitk08su" path="res://Menus/settings/settings.gd" id="1_bo08c"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_bo08c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -235.0
offset_right = 168.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="Music" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Music"]
layout_mode = 2
text = "Music  "

[node name="MusicSlider" type="HSlider" parent="TextureRect/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SFX" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/SFX"]
layout_mode = 2
text = "SFX     	"

[node name="SFXSlider" type="HSlider" parent="TextureRect/VBoxContainer/SFX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/Master"]
layout_mode = 2
text = "Master
"

[node name="MasterSlider" type="HSlider" parent="TextureRect/VBoxContainer/Master"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="TextureRect/VBoxContainer/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/Master/MasterSlider" to="." method="_on_master_slider_value_changed"]
