extends Control
class_name Settings



func _on_master_slider_value_changed(value: float) -> void:
	pass # Replace with function body.


func _on_sfx_slider_value_changed(value: float) -> void:
	pass # Replace with function body.


func _on_music_slider_value_changed(value: float) -> void:
	pass # Replace with function body.
